# pose-estimation

./: .gitignore  CMakeLists.txt  LICENSE  ParameterTest_8hpp_source.html  README.md  README.md~  annotated.html  argtest.h~  board_8hpp_source.html  book.json  classParameterTest-members.html  classParameterTest.html  classPoseEstimation_1_1BOARDLocalReferenceFrameEstimator-members.html  classPoseEstimation_1_1BOARDLocalReferenceFrameEstimator.html  classPoseEstimation_1_1CF-members.html  classPoseEstimation_1_1CF.html  classPoseEstimation_1_1Color-members.html  classPoseEstimation_1_1Color.html  classPoseEstimation_1_1ConstantConstraint-members.html  classPoseEstimation_1_1ConstantConstraint.html  classPoseEstimation_1_1Downsampler-members.html  classPoseEstimation_1_1Downsampler.html  classPoseEstimation_1_1Enum-members.html  classPoseEstimation_1_1Enum.html  classPoseEstimation_1_1EnumParameter-members.html  classPoseEstimation_1_1EnumParameter.html  classPoseEstimation_1_1FPFHFeatureDescriptor-members.html  classPoseEstimation_1_1FPFHFeatureDescriptor.html  classPoseEstimation_1_1FeatureDescriptor-members.html  classPoseEstimation_1_1FeatureDescriptor.html  classPoseEstimation_1_1FeatureMatcher-members.html  classPoseEstimation_1_1FeatureMatcher.html  classPoseEstimation_1_1GeometricConsistency-members.html  classPoseEstimation_1_1GeometricConsistency.html  classPoseEstimation_1_1HoughVoting-members.html  classPoseEstimation_1_1HoughVoting.html  classPoseEstimation_1_1HypothesisVerifier-members.html  classPoseEstimation_1_1HypothesisVerifier.html  classPoseEstimation_1_1ICPPoseRefiner-members.html  classPoseEstimation_1_1ICPPoseRefiner.html  (+151 more)
descriptors/: fpfh.hpp  rift.hpp  rsd.hpp  shot.hpp  spinimage.hpp  usc.hpp
downsamplers/: uniform.hpp  voxelgrid.hpp
featurematcher/: kdtree.hpp
keypointextractors/: iss.hpp  uniform.hpp
lrfestimators/: board.hpp
optimization/: optimizer.h  optimizer.hpp
poserefiners/: icp.hpp  ndt.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  (+19 more)
test/: CMakeLists.txt  ParameterTest.hpp  run_tests.cpp
transformationestimators/: gc.hpp  hough3d.hpp  ransac.hpp  svd.hpp
